feat(ci): 添加应用 CI 任务创建功能
- 新增 AppCITaskUseCase 结构体和相关方法，用于创建应用 CI任务
- 添加 AppCITaskService 结构体和相关方法，提供 CI 任务创建的 gRPC 和 HTTP 服务
- 在 biz 和 service 包中分别实现 CI 任务创建的业务逻辑和服务接口
- 优化 ci.pb.go 文件，移除未使用的 import 语句
- 在 biz.go 中添加 AppCITaskUseCase 的 ProviderSet
