# apis/api/v1/ci_task/ci_task.pb.go
@@ -12,7 +12,6 @@ import (
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
 	emptypb "google.golang.org/protobuf/types/known/emptypb"
-	app "kubecaptain/apis/api/v1/app"
 	reflect "reflect"
 	sync "sync"
 	unsafe "unsafe"
@@ -27,7 +26,7 @@ const (
 
 type CreateRequest struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
-	AppName       *app.NameRequest       `protobuf:"bytes,1,opt,name=app_name,json=appName,proto3" json:"app_name,omitempty"`
+	Name          string                 `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -62,11 +61,11 @@ func (*CreateRequest) Descriptor() ([]byte, []int) {
 	return file_v1_ci_task_ci_task_proto_rawDescGZIP(), []int{0}
 }
 
-func (x *CreateRequest) GetAppName() *app.NameRequest {
+func (x *CreateRequest) GetName() string {
 	if x != nil {
-		return x.AppName
+		return x.Name
 	}
-	return nil
+	return ""
 }
 
 var File_v1_ci_task_ci_task_proto protoreflect.FileDescriptor
@@ -82,26 +81,24 @@ var file_v1_ci_task_ci_task_proto_rawDesc = string([]byte{
 	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1b, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70,
 	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x65, 0x6d, 0x70, 0x74, 0x79, 0x2e, 0x70, 0x72,
 	0x6f, 0x74, 0x6f, 0x1a, 0x17, 0x76, 0x61, 0x6c, 0x69, 0x64, 0x61, 0x74, 0x65, 0x2f, 0x76, 0x61,
-	0x6c, 0x69, 0x64, 0x61, 0x74, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x10, 0x76, 0x31,
-	0x2f, 0x61, 0x70, 0x70, 0x2f, 0x61, 0x70, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x5a,
-	0x0a, 0x0d, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12,
-	0x49, 0x0a, 0x08, 0x61, 0x70, 0x70, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28,
-	0x0b, 0x32, 0x28, 0x2e, 0x6b, 0x75, 0x62, 0x65, 0x63, 0x61, 0x70, 0x74, 0x61, 0x69, 0x6e, 0x2e,
-	0x61, 0x70, 0x69, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x61, 0x70, 0x70, 0x2e,
-	0x4e, 0x61, 0x6d, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x42, 0x04, 0xe2, 0x41, 0x01,
-	0x02, 0x52, 0x07, 0x61, 0x70, 0x70, 0x4e, 0x61, 0x6d, 0x65, 0x32, 0x8c, 0x01, 0x0a, 0x10, 0x41,
-	0x70, 0x70, 0x43, 0x49, 0x54, 0x61, 0x73, 0x6b, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12,
-	0x78, 0x0a, 0x06, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x12, 0x2a, 0x2e, 0x6b, 0x75, 0x62, 0x65,
-	0x63, 0x61, 0x70, 0x74, 0x61, 0x69, 0x6e, 0x2e, 0x61, 0x70, 0x69, 0x73, 0x2e, 0x61, 0x70, 0x69,
-	0x2e, 0x76, 0x31, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x2a, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x24, 0x3a, 0x01, 0x2a, 0x22, 0x1f, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x70,
-	0x70, 0x2f, 0x7b, 0x61, 0x70, 0x70, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x2e, 0x6e, 0x61, 0x6d, 0x65,
-	0x7d, 0x2f, 0x63, 0x69, 0x2f, 0x74, 0x61, 0x73, 0x6b, 0x42, 0x2a, 0x5a, 0x28, 0x6b, 0x75, 0x62,
-	0x65, 0x63, 0x61, 0x70, 0x74, 0x61, 0x69, 0x6e, 0x2f, 0x61, 0x70, 0x69, 0x73, 0x2f, 0x61, 0x70,
-	0x69, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x70, 0x70, 0x2f, 0x63, 0x69, 0x2f, 0x74, 0x61, 0x73, 0x6b,
-	0x3b, 0x74, 0x61, 0x73, 0x6b, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6c, 0x69, 0x64, 0x61, 0x74, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x4e, 0x0a, 0x0d,
+	0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x3d, 0x0a,
+	0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x42, 0x29, 0xe2, 0x41, 0x01,
+	0x02, 0xfa, 0x42, 0x22, 0x72, 0x20, 0x18, 0x40, 0x32, 0x1c, 0x5e, 0x5b, 0x61, 0x2d, 0x7a, 0x5d,
+	0x28, 0x5b, 0x61, 0x2d, 0x7a, 0x30, 0x2d, 0x39, 0x2d, 0x5d, 0x2a, 0x5b, 0x61, 0x2d, 0x7a, 0x30,
+	0x2d, 0x39, 0x5d, 0x29, 0x3f, 0x24, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x32, 0x83, 0x01, 0x0a,
+	0x10, 0x41, 0x70, 0x70, 0x43, 0x49, 0x54, 0x61, 0x73, 0x6b, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x12, 0x6f, 0x0a, 0x06, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x12, 0x2a, 0x2e, 0x6b, 0x75,
+	0x62, 0x65, 0x63, 0x61, 0x70, 0x74, 0x61, 0x69, 0x6e, 0x2e, 0x61, 0x70, 0x69, 0x73, 0x2e, 0x61,
+	0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22,
+	0x21, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1b, 0x3a, 0x01, 0x2a, 0x22, 0x16, 0x2f, 0x76, 0x31, 0x2f,
+	0x61, 0x70, 0x70, 0x2f, 0x7b, 0x6e, 0x61, 0x6d, 0x65, 0x7d, 0x2f, 0x63, 0x69, 0x2f, 0x74, 0x61,
+	0x73, 0x6b, 0x42, 0x2a, 0x5a, 0x28, 0x6b, 0x75, 0x62, 0x65, 0x63, 0x61, 0x70, 0x74, 0x61, 0x69,
+	0x6e, 0x2f, 0x61, 0x70, 0x69, 0x73, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x70,
+	0x70, 0x2f, 0x63, 0x69, 0x2f, 0x74, 0x61, 0x73, 0x6b, 0x3b, 0x74, 0x61, 0x73, 0x6b, 0x62, 0x06,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 })
 
 var (
@@ -118,19 +115,17 @@ func file_v1_ci_task_ci_task_proto_rawDescGZIP() []byte {
 
 var file_v1_ci_task_ci_task_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
 var file_v1_ci_task_ci_task_proto_goTypes = []any{
-	(*CreateRequest)(nil),   // 0: kubecaptain.apis.api.v1.app.CreateRequest
-	(*app.NameRequest)(nil), // 1: kubecaptain.apis.api.v1.app.NameRequest
-	(*emptypb.Empty)(nil),   // 2: google.protobuf.Empty
+	(*CreateRequest)(nil), // 0: kubecaptain.apis.api.v1.app.CreateRequest
+	(*emptypb.Empty)(nil), // 1: google.protobuf.Empty
 }
 var file_v1_ci_task_ci_task_proto_depIdxs = []int32{
-	1, // 0: kubecaptain.apis.api.v1.app.CreateRequest.app_name:type_name -> kubecaptain.apis.api.v1.app.NameRequest
-	0, // 1: kubecaptain.apis.api.v1.app.AppCITaskService.Create:input_type -> kubecaptain.apis.api.v1.app.CreateRequest
-	2, // 2: kubecaptain.apis.api.v1.app.AppCITaskService.Create:output_type -> google.protobuf.Empty
-	2, // [2:3] is the sub-list for method output_type
-	1, // [1:2] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	0, // 0: kubecaptain.apis.api.v1.app.AppCITaskService.Create:input_type -> kubecaptain.apis.api.v1.app.CreateRequest
+	1, // 1: kubecaptain.apis.api.v1.app.AppCITaskService.Create:output_type -> google.protobuf.Empty
+	1, // [1:2] is the sub-list for method output_type
+	0, // [0:1] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
 }
 
 func init() { file_v1_ci_task_ci_task_proto_init() }
